Fixed UI items,functionalities need to be given

--- a/ImageSlider/index.html
+++ b/ImageSlider/index.html
@@ -6,5 +6,22 @@
     <title>Image Slider</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="gallery-wrap">
+      <img src="h-scroll-img/images/back.png" id="backBtn" />
+      <div class="gallery">
+        <div>
+          <img src="h-scroll-img/images/image-1.png" />
+          <img src="h-scroll-img/images/image-2.png" />
+          <img src="h-scroll-img/images/image-3.png" />
+        </div>
+        <div>
+          <img src="h-scroll-img/images/image-4.png" />
+          <img src="h-scroll-img/images/image-5.png" />
+          <img src="h-scroll-img/images/image-6.png" />
+        </div>
+      </div>
+      <img src="h-scroll-img/images/next.png" id="nextBtn" />
+    </div>
+  </body>
 </html>
