--- a/ImageSlider/index.html
+++ b/ImageSlider/index.html
@@ -23,5 +23,29 @@
       </div>
       <img src="h-scroll-img/images/next.png" id="nextBtn" />
     </div>
+    <script>
+      //selecting the scoll container:gallery
+      let scrollContainer = document.querySelector(".gallery");
+      let backButton = document.getElementById("backBtn");
+      let nextButton = document.getElementById("nextBtn");
+
+      //adding scroll functionality
+      scrollContainer.addEventListener("wheel", (evt) => {
+        evt.preventDefault();
+        scrollContainer.style.scrollBehavior = "smooth";
+        scrollContainer.scrollLeft += evt.deltaY;
+      });
+
+      //adding back button functionality
+      backButton.addEventListener("click", () => {
+        scrollContainer.style.scrollBehavior = "smooth";
+        scrollContainer.scrollLeft -= 900;
+      });
+      //adding next button functionality
+      nextButton.addEventListener("click", () => {
+        scrollContainer.style.scrollBehavior = "smooth";
+        scrollContainer.scrollLeft += 900;
+      });
+    </script>
   </body>
 </html>
