--- a/1.ImageSlider/index.html
+++ b/1.ImageSlider/index.html
@@ -24,7 +24,7 @@
       <img src="h-scroll-img/images/next.png" id="nextBtn" />
     </div>
     <script>
-      //selecting the scoll container:gallery
+      //selecting the scroll container:gallery
       let scrollContainer = document.querySelector(".gallery");
       let backButton = document.getElementById("backBtn");
       let nextButton = document.getElementById("nextBtn");
